# ECE578_Final_Project_MicroChat

MicroChat/: CMakeLists.txt  Dockerfile  docker-compose.yml  microchat.thrift
MicroChat/config/: service-config.json
MicroChat/gen-cpp/: DatabaseService.cpp  DatabaseService.h  DatabaseService_server.skeleton.cpp  EmojiPredictionService.cpp  EmojiPredictionService.h  EmojiPredictionService_server.skeleton.cpp  FriendRecommendationService.cpp  FriendRecommendationService.h  FriendRecommendationService_server.skeleton.cpp  MessageService.cpp  MessageService.h  MessageService_server.skeleton.cpp  UserService.cpp  UserService.h  UserService_server.skeleton.cpp  microchat_constants.cpp  microchat_constants.h  microchat_types.cpp  microchat_types.h
MicroChat/gen-lua/: microchat_DatabaseService.lua  microchat_EmojiPredictionService.lua  microchat_FriendRecommendationService.lua  microchat_MessageService.lua  microchat_UserService.lua  microchat_ttypes.lua
MicroChat/nginx_reverse_proxy/conf/: nginx.conf
MicroChat/nginx_reverse_proxy/lua-scripts/api/messageservice/: compose.lua  getmessages.lua  getreadmessages.lua  getunreadmessages.lua
MicroChat/nginx_reverse_proxy/lua-scripts/api/userservice/: createuser.lua  getfriends.lua  getuserid.lua  login.lua  logout.lua  ping.lua
MicroChat/src/: CMakeLists.txt  ClientPool.h  GenericClient.h  ThriftClient.h  logger.h  microchat_utils.h  utils.h  utils_mongodb.h
MicroChat/src/DatabaseService/: CMakeLists.txt  DatabaseHandler.h  DatabaseService.cpp
MicroChat/src/EmojiPredictionService/: CMakeLists.txt  EmojiPredictionHandler.h  EmojiPredictionService.cpp
MicroChat/src/FriendRecommendationService/: CMakeLists.txt  FriendRecommendationHandler.h  FriendRecommendationService.cpp
MicroChat/src/MessageService/: CMakeLists.txt  MessageHandler.h  MessageService.cpp
MicroChat/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
vendingmachine_tutorial-master/: docker-compose.yml
vendingmachine_tutorial-master/src/BeveragePreferenceService/: BeveragePreferenceHandler.h
